--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.28-alpha"
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
+    implementation project(path: ':domain')
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
     // Hilt with jetpack
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
