--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,18 +24,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin_version}"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
@@ -65,8 +68,29 @@ dependencies {
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    // Java Tests
+    testImplementation "androidx.arch.core:core-testing:${versions.androidx_arch_core}"
+    testImplementation "androidx.test:core:${versions.androidx_test_core}"
+    testImplementation "androidx.test.espresso:espresso-core:${versions.androidx_test_espresso_core}"
+    testImplementation "androidx.test.ext:junit:${versions.androidx_test_ext_junit}"
+    testImplementation "androidx.test.ext:truth:${versions.androidx_test_truth}"
+    testImplementation "androidx.test:rules:${versions.androidx_test_rule}"
+    testImplementation "androidx.test:runner:${versions.androidx_test_runner}"
+    testImplementation "com.google.truth:truth:${versions.truth}"
+    testImplementation "com.squareup.okhttp3:mockwebserver:${versions.okhttp_mock_server}"
+    testImplementation "junit:junit:${versions.junit}"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:${versions.coroutines}"
+    testImplementation "org.mockito:mockito-core:${versions.mockito}"
+    testImplementation "org.robolectric:robolectric:${versions.robolectric}"
+    testImplementation "androidx.constraintlayout:constraintlayout:${versions.constraint}"
+
+    // Android Tests
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:${versions.okhttp_mock_server}"
+    androidTestImplementation "androidx.test.ext:junit:${versions.androidx_test_junit}"
+    androidTestImplementation "androidx.test.espresso:espresso-core:${versions.androidx_test_espresso_core}"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:${versions.androidx_test_espresso_core}"
+    androidTestImplementation "androidx.arch.core:core-testing:${versions.androidx_arch_core}"
+    androidTestImplementation "androidx.constraintlayout:constraintlayout:${versions.constraint}"
+    debugImplementation "androidx.fragment:fragment-testing:${versions.androidx_fragment}"
 
 }
