--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,8 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        //testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.gk.app.android.testingviewmodels.HiltRunner"
     }
 
     buildTypes {
@@ -64,9 +65,16 @@ android {
             includeAndroidResources = true
         }
     }
+
+    hilt {
+        enableTransformForLocalTests = true
+    }
 }
 
 dependencies {
+    // Project
+    implementation project(path: ':domain')
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin_version}"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -75,8 +83,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-//    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0'
-//    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0'
 
     // We must use these for viewModels() delegate to work correctly with no zero argument
     // constructor view models and automatically inject the saved sate handle
@@ -86,19 +92,22 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.2.0'
 
-    //testImplementation 'androidx.fragment:fragment-testing:1.2.5'
-
     // Hilt
-    implementation "com.google.dagger:hilt-android:2.28-alpha"
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
-    implementation project(path: ':domain')
-    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+    implementation 'com.google.dagger:hilt-android:2.29.1-alpha'
+    kapt 'com.google.dagger:hilt-android-compiler:2.29.1-alpha'
     // Hilt with jetpack
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
+    // Hilt for Robolectric tests.
+    testImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
+    kaptTest 'com.google.dagger:hilt-android-compiler:2.29.1-alpha'
+    // Hilt for Android tests.
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.29.1-alpha'
+
 
     // Java Tests
+    testImplementation "junit:junit:${versions.junit}"
     testImplementation "androidx.arch.core:core-testing:${versions.androidx_arch_core}"
     testImplementation "androidx.test:core:${versions.androidx_test_core}"
     testImplementation "androidx.test.espresso:espresso-core:${versions.androidx_test_espresso_core}"
@@ -108,7 +117,6 @@ dependencies {
     testImplementation "androidx.test:runner:${versions.androidx_test_runner}"
     testImplementation "com.google.truth:truth:${versions.truth}"
     testImplementation "com.squareup.okhttp3:mockwebserver:${versions.okhttp_mock_server}"
-    testImplementation "junit:junit:${versions.junit}"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:${versions.coroutines}"
     testImplementation "org.mockito:mockito-core:${versions.mockito}"
     testImplementation "org.robolectric:robolectric:${versions.robolectric}"
