--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         versionName "1.0"
 
         //testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        testInstrumentationRunner "com.gk.app.android.testingviewmodels.HiltRunner"
+        testInstrumentationRunner "com.gk.app.android.testingviewmodels.test.android.HiltRunner"
     }
 
     buildTypes {
