--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,14 +86,20 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-
-    // We must use these for viewModels() delegate to work correctly with no zero argument
+    // We must use these for viewModels() delegate to work correctly with no zero-argument
     // constructor view models and automatically inject the saved sate handle
     implementation 'androidx.fragment:fragment:1.2.5'
     implementation 'androidx.fragment:fragment-ktx:1.2.5'
     implementation 'androidx.activity:activity:1.1.0'
     implementation 'androidx.activity:activity-ktx:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.2.0'
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.0"
+    // Feature module Support
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.0"
+    // Testing Navigation
+    androidTestImplementation "androidx.navigation:navigation-testing:2.3.0"
 
     // Hilt
     implementation 'com.google.dagger:hilt-android:2.29.1-alpha'
